--- a/WebRtcApp/package.json
+++ b/WebRtcApp/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "i": "^0.3.7",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.2",
     "socket.io-client": "^4.8.1"
   },
